--- a/assignemnt3/report3.tex
+++ b/assignemnt3/report3.tex
@@ -32,7 +32,7 @@
  
 % Upper part of the page
 
-\includegraphics[width=5cm]{KSU_Logo.png}\\
+\includegraphics[width=5cm]{figures/KSU_Logo.png}\\
 \small King Saud University\\College of Computer and Information Sciences\\Department of Computer Science\\[2cm]
 
 
