--- a/assignemnt3/presentation.tex
+++ b/assignemnt3/presentation.tex
@@ -150,10 +150,10 @@ $$P(c) = \frac{[\tau[v][c]]^{\alpha} \cdot [\eta[c]]^{\beta}}{\sum_{c'} [\tau[v]
 
 \begin{frame}{ACO Algorithm - Ant Solution Construction}
 \scriptsize
-\textbf{ConstructSolution():} \\[0.5em]
+\textbf{ConstructSolution(starting\_node):} \\[0.5em]
 
 solution $\leftarrow$ \{\} \\[0.3em]
-vertices $\leftarrow$ shuffle(V) \hspace{2em} \textit{\textcolor{gray}{// Random order for diversity}} \\[0.5em]
+vertices $\leftarrow$ [starting\_node] + shuffle(V $\setminus$ \{starting\_node\}) \hspace{2em} \textit{\textcolor{gray}{// Assigned start, then random}} \\[0.5em]
 
 \textbf{FOR} each $v$ in vertices: \hspace{2em} \textit{\textcolor{gray}{// Sequential vertex coloring}} \\[0.3em]
 \hspace{1em} valid\_colors $\leftarrow$ \{$c$ : no neighbor of $v$ uses $c$\} \\[0.3em]
@@ -187,8 +187,8 @@ Dictionary mapping: $\text{Solution} = \{v_1: c_1, v_2: c_2, \dots, v_n: c_n\}$
 \begin{block}{Population Generation}
 \begin{itemize}
     \item New population generated at each iteration
-    \item Random starting nodes for diversity
-    \item Random visitation order
+    \item Assigned starting nodes (distributed for coverage)
+    \item Shuffled visitation order for remaining nodes
 \end{itemize}
 \end{block}
 \end{frame}
@@ -227,7 +227,7 @@ Dictionary mapping: $\text{Solution} = \{v_1: c_1, v_2: c_2, \dots, v_n: c_n\}$
 \begin{block}{Optimization Setup}
 \begin{itemize}
     \item \textbf{Framework:} Optuna TPE (Tree-structured Parzen Estimator)
-    \item \textbf{Trials:} 40 independent trials
+    \item \textbf{Trials:} 40 trials
     \item \textbf{Parallel Workers:} 6 (n\_jobs=6)
     \item \textbf{Duration:} 46 hours wall-clock (225 hours computational)
     \item \textbf{Tuning Dataset:} gc\_500\_9 (500 vertices, 90\% density)
@@ -304,7 +304,7 @@ $\rightarrow$ Intensification dominates over diversification
 \begin{figure}
     \centering
     \includegraphics[width=0.75\textwidth]{figures/best_trial_graph_coloring.png}
-    \caption{Trial 19 coloring of gc\_500\_9 - Valid conflict-free solution}
+    \caption{Trial 19: 200 colors, zero conflicts on gc\_500\_9 - Valid solution}
 \end{figure}
 \end{frame}
 
