--- a/assignemnt3/report3.tex
+++ b/assignemnt3/report3.tex
@@ -77,19 +77,22 @@
  
 \end{titlepage}
 
+\section{Introduction}
 
+The Graph Coloring Problem (GCP) is an $\text{NP}$-hard combinatorial optimization problem with applications in scheduling, register allocation, and resource management. This report investigates \textbf{Ant Colony Optimization (ACO)}, a population-based metaheuristic, for solving the GCP on DIMACS benchmark instances. The work implements ACO with comprehensive hyperparameter optimization using Optuna and compares its performance against Greedy and Tabu Search baselines to illuminate trade-offs between constructive and improvement-based metaheuristic approaches.
 
-
- 
-    
-
+The report is organized as follows: Section~\ref{sec:problem} defines the GCP formally. Section~\ref{sec:methodology} presents the ACO methodology and algorithms. Section~\ref{sec:solution} describes solution representation and constraint handling. Section~\ref{sec:experimental} details the experimental setup and hyperparameter tuning. Section~\ref{sec:results} presents comparative results and analysis. Section~\ref{sec:conclusion} concludes with key findings.
 
 \section{Problem Statement}
+\label{sec:problem}
 
-The \textbf{Graph Coloring Problem (GCP)} is formally defined for an undirected graph $G = (V, E)$, where $V$ represents the set of vertices and $E$ is the set of edges connecting these vertices \cite{Bessedik2005, Cadenas2023, MendezDiaz2014}. A $k$-coloring of $G$ is a function $C : V \to \{1, 2, \dots, k\}$ that assigns a color from a set of $k$ available colors to each vertex in $V$, subject to the constraint that any two adjacent vertices must be assigned different colors. Formally, for any edge $(u, v) \in E$, it must hold that $C(u) \neq C(v)$ \cite{Bessedik2005, Cadenas2023, Indumathi2021, Postigo2021}. The primary objective of the GCP is to find the minimum number of colors, $k$, required for a valid coloring, which is known as the chromatic number of $G$, denoted by $\chi(G)$ \cite{Bessedik2005, Indumathi2021}.
+The \textbf{Graph Coloring Problem (GCP)} is formally defined for an undirected graph $G = (V, E)$, where $V$ represents the set of vertices and $E$ is the set of edges connecting these vertices. A coloring of $G$ is a function $C : V \to \mathbb{N}^+$ that assigns a color to each vertex in $V$, subject to the constraint that any two adjacent vertices must be assigned different colors. Formally, for any edge $(u, v) \in E$, it must hold that $C(u) \neq C(v)$. The primary objective of the GCP is to find the minimum number of colors required for a valid coloring, which is known as the chromatic number of $G$, denoted by $\chi(G)$ \cite{Bessedik2005, MendezDiaz2014}.
+\newline
 
-\subsection{Formal Problem Components}
 
+Below are the formal definitions and components of the GCP:
+%add new line
+\newline
 \textbf{Input:}
 \begin{itemize}
     \item An undirected graph $G = (V, E)$ where:
@@ -97,46 +100,61 @@ The \textbf{Graph Coloring Problem (GCP)} is formally defined for an undirected 
         \item $V = \{v_1, v_2, \dots, v_n\}$ is the set of vertices with $|V| = n$
         \item $E \subseteq V \times V$ is the set of edges with $|E| = m$
     \end{itemize}
-    \item An initial number of colors $k$ (to be minimized)
 \end{itemize}
 
 \textbf{Output:}
 \begin{itemize}
-    \item A coloring function $C: V \to \{1, 2, \dots, k\}$ that assigns a color to each vertex
-    \item The minimum number of colors $k^* = \chi(G)$ needed for a proper coloring
+    \item A valid coloring function $C: V \to \mathbb{N}^+$ that assigns a color to each vertex
+    \item The chromatic number $\chi(G)$, representing the minimum number of distinct colors used
 \end{itemize}
 
 \textbf{Decision Variables:}
 \begin{itemize}
-    \item $C(v_i)$: The color assigned to vertex $v_i \in V$, where $C(v_i) \in \{1, 2, \dots, k\}$
+    \item $C(v_i)$: The color assigned to vertex $v_i \in V$, where $C(v_i) \in \mathbb{N}^+$
 \end{itemize}
 
 \textbf{Constraints:}
-\begin{enumerate}
+\begin{itemize}
     \item \textbf{Adjacent vertices constraint:} For all edges $(u, v) \in E$, adjacent vertices must have different colors:
     $$\forall (u, v) \in E: \quad C(u) \neq C(v)$$
-    \item \textbf{Color range constraint:} Each vertex must be assigned exactly one color from the available color set:
-    $$\forall v \in V: \quad C(v) \in \{1, 2, \dots, k\}$$
-\end{enumerate}
+\end{itemize}
 
 \textbf{Objective Function:}
+The ultimate goal is to find the chromatic number $\chi(G)$, the minimum number of distinct colors needed for a proper coloring:
 \begin{itemize}
-    \item Minimize the number of colors used: $\min k$ subject to the constraints above
-    \item Equivalently, minimize the conflict count $F(C)$ where:
+    \item Minimize the number of distinct colors used: $\min |\{C(v) : v \in V\}|$
+    \item Subject to the adjacency constraint: $\forall (u, v) \in E: C(u) \neq C(v)$
+    \item Equivalently, a solution is feasible if and only if the conflict count $F(C) = 0$, where:
     $$F(C) = \sum_{(u,v) \in E} \mathbb{I}(C(u) = C(v))$$
-    where $\mathbb{I}$ is the indicator function that returns 1 if $C(u) = C(v)$ and 0 otherwise
-    \item A solution is feasible (proper coloring) if and only if $F(C) = 0$
+    and $\mathbb{I}$ is the indicator function that returns 1 if $C(u) = C(v)$ and 0 otherwise
+\end{itemize}
+
+
+\section{Motivation}
+The GCP is $\text{NP}$-hard, meaning that finding the optimal chromatic number for large graphs is computationally infeasible using exact methods. \textbf{Ant Colony Optimization} is chosen as a population-based metaheuristic because:
+
+\begin{itemize}
+    \item \textbf{Constructive Approach:} ACO builds solutions from scratch rather than improving existing ones, eliminating dependency on initial solution quality.
+    
+    \item \textbf{Collective Intelligence:} Multiple ants explore the solution space in parallel, enabling simultaneous investigation of diverse solution construction paths.
+    
+    \item \textbf{Adaptive Learning:} Pheromone-based memory accumulates knowledge about successful color assignments over iterations, creating an adaptive bias toward high-quality solutions without rigid deterministic rules.
+    
+    \item \textbf{Balance of Exploration-Exploitation:} The combination of pheromone trails (exploitation), heuristic information (intensification), probabilistic selection (exploration), and evaporation (forgetting) provides natural mechanisms for balancing these competing objectives.
 \end{itemize}
 
  
 \section{Methodology (P-metaheuristic)}
+\label{sec:methodology}
 
 This report implements a \textbf{population-based metaheuristic} (Ant Colony Optimization) to address the computational complexity of the GCP. ACO leverages collective intelligence of multiple agents to explore the solution space through constructive pheromone-guided building of solutions.
 
-\subsection{Ant Colony Optimization (ACO)}
+
+The comparison between ACO (population-based) and Tabu Search (single-solution) serves to illuminate the fundamental trade-offs between these two major metaheuristic paradigms for the GCP.
+
 \textbf{Ant Colony Optimization (ACO)} is a nature-inspired population-based metaheuristic that mimics the foraging behavior of ants, which deposit pheromone trails to guide other ants toward good solutions \cite{Bessedik2005}. Unlike improvement-based methods like Tabu Search, ACO employs multiple artificial ants that work in parallel to construct complete solutions from scratch, eliminating dependency on initial solution quality.
 
-\subsubsection{ACO Mechanism}
+\subsection{ACO Mechanism}
 The ACO algorithm for graph coloring operates through the following key mechanisms:
 
 \begin{itemize}
@@ -235,6 +253,7 @@ The complete ACO algorithm for graph coloring is formalized below in two compone
 
 
 \section{Solution Representation, Objective Function, and Constraints}
+\label{sec:solution}
 
 \subsection{Solution Representation}
 In ACO, a coloring solution is represented as a dictionary (mapping) where each key is a vertex and its value is the assigned color:
@@ -296,27 +315,8 @@ ACO balances exploration and exploitation through multiple complementary mechani
     \end{itemize}
 \end{itemize}
 
-\section{Motivation and Contribution}
-
-\subsection{Motivation}
-The GCP is $\text{NP}$-hard, meaning that finding the optimal chromatic number for large graphs is computationally infeasible using exact methods. \textbf{Ant Colony Optimization} is chosen as a population-based metaheuristic because:
-
-\begin{itemize}
-    \item \textbf{Constructive Approach:} ACO builds solutions from scratch rather than improving existing ones, eliminating dependency on initial solution quality.
-    
-    \item \textbf{Collective Intelligence:} Multiple ants explore the solution space in parallel, enabling simultaneous investigation of diverse solution construction paths.
-    
-    \item \textbf{Adaptive Learning:} Pheromone-based memory accumulates knowledge about successful color assignments over iterations, creating an adaptive bias toward high-quality solutions without rigid deterministic rules.
-    
-    \item \textbf{Balance of Exploration-Exploitation:} The combination of pheromone trails (exploitation), heuristic information (intensification), probabilistic selection (exploration), and evaporation (forgetting) provides natural mechanisms for balancing these competing objectives.
-\end{itemize}
-
-The comparison between ACO (population-based) and Tabu Search (single-solution) serves to illuminate the fundamental trade-offs between these two major metaheuristic paradigms for the GCP.
-
-\subsection{Contribution}
-This work implements a constructive ACO approach for graph coloring with dynamic pheromone matrix expansion and parallel ant execution (82 ants) using multi-threading. Comprehensive hyperparameter tuning via Optuna framework over 40 trials optimized 6 parameters ($\alpha=1.54$, $\beta=5.97$, $\rho=0.097$, $m=82$, $Q=1.30$, iterations=261). The study provides a three-way empirical comparison across Greedy, Tabu Search, and ACO on DIMACS benchmarks (250-1000 vertices, 50-90\% density), revealing that constructive methods avoid initial solution dependency but achieve higher color counts than improvement-based approaches, while population-based methods offer consistent performance across instances.
-
 \section{Experimental Setup}
+\label{sec:experimental}
 
 \subsection{Implementation Environment}
 The model was implemented using the \textbf{Python} programming language (version 3.12) within both \textbf{Jupyter Notebook} and standalone Python scripts. Several key libraries were essential for this task:
@@ -343,7 +343,6 @@ An \textbf{automated hyperparameter optimization} strategy was employed using th
 \end{itemize}
 
 The optimized parameter values are presented in Table~\ref{tab:hyperparameters}.
-ß
 \begin{longtable}{|l|l|l|}
 \caption{ACO Hyperparameter Optimization Results}
 \label{tab:hyperparameters}\\
@@ -445,23 +444,16 @@ Each algorithm was executed 3 times per instance to assess statistical robustnes
 
 
 \section{Results and Discussion}
- The results are compared against two baseline algorithms: \textbf{Greedy} (simple constructive heuristic) and \textbf{Tabu Search} (single-solution metaheuristic from Assignment 2).
-\subsection{Performance Metrics}
-Performance is evaluated using:
-\begin{itemize}
-    \item \textbf{Solution Quality ($k$):} The final number of colors used (primary metric).
-    \item \textbf{Percent Deviation from BKS:} Calculated against the Best-Known Solution (chromatic number).
-    $$
-    \text{Deviation } (\%) = \frac{\text{Obtained Colors} - \text{BKS}}{\text{BKS}} \times 100
-    $$
-    \item \textbf{Robustness:} Measured by the standard deviation ($\sigma$) and the average result over \textbf{3 independent runs}.
-    \item \textbf{Computational Effort:} Measured by the average run time in seconds.
-    \item \textbf{Conflict Count:} Number of edges connecting same-colored vertices (all algorithms achieved zero conflicts).
-\end{itemize}
+\label{sec:results}
 
-\subsection{Comprehensive Three-Way Comparison}
+The ACO algorithm's performance is evaluated against two baseline methods: \textbf{Greedy} (simple constructive heuristic) and \textbf{Tabu Search} (single-solution metaheuristic from Assignment 2). Performance is assessed using solution quality (number of colors), percent deviation from Best-Known Solutions (BKS), robustness (standard deviation over 3 runs), and computational time. The deviation from BKS is calculated as:
+$$
+\text{Deviation } (\%) = \frac{\text{Obtained Colors} - \text{BKS}}{\text{BKS}} \times 100
+$$
 
-The ACO algorithm's performance is evaluated against two baseline methods for comparative analysis: \textbf{Greedy} (simple constructive heuristic providing fast approximate solutions) and \textbf{Tabu Search} (the S-metaheuristic implemented in Assignment 2). Table~\ref{tab:performance_comparison} presents detailed performance statistics across all three algorithms.
+\subsection{Comparative Performance Results}
+
+Table~\ref{tab:performance_comparison} presents detailed performance statistics across all three algorithms.
 
 \begin{longtable}{|l|l|l|l|l|l|l|l|}
 \caption{Comprehensive Performance Comparison Across Three Algorithmic Paradigms}
@@ -485,8 +477,6 @@ The ACO algorithm's performance is evaluated against two baseline methods for co
 \hline
 \end{longtable}
 
-The comparative performance analysis (Figures~\ref{fig:comparison_best} and~\ref{fig:comparison_avg}) reveals a striking pattern: ACO consistently underperforms both baseline methods across all test instances, challenging the expectation that metaheuristics should outperform simple constructive approaches. Examining best-case performance (Figure~\ref{fig:comparison_best}), ACO produces 58-166\% more colors than the best-known solutions, while Tabu Search achieves only 21-46\% deviation. More concerning, ACO even trails the deterministic Greedy algorithm on some instances, suggesting fundamental algorithmic limitations rather than mere parameter tuning issues.
-
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.85\textwidth]{figures/comparison_best_colors.png} 
@@ -494,14 +484,16 @@ The comparative performance analysis (Figures~\ref{fig:comparison_best} and~\ref
     \label{fig:comparison_best}
 \end{figure}
 
-The average performance over three runs (Figure~\ref{fig:comparison_avg}) exposes an additional scalability problem: the performance gap between ACO and Tabu Search widens dramatically as graph size increases. On dsjc250.5 (250 vertices), ACO uses approximately 56 colors versus TS's 35 colors—a 61\% increase. However, on dsjc1000.5 (1000 vertices), ACO requires 227 colors versus TS's 125 colors—an 82\% increase. This non-linear degradation indicates that ACO's population-based constructive approach struggles increasingly with larger problem instances, likely due to pheromone signal dilution across the expanding solution space. The consistency metrics further reveal that while ACO shows low standard deviation (indicating reproducible results), it reproducibly achieves poor solutions—consistency without quality provides little practical value.
-
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.85\textwidth]{figures/comparison_avg_colors.png}
     \caption{Average colors comparison (3 runs per algorithm)}
     \label{fig:comparison_avg}
 \end{figure}
+
+The comparative performance analysis (Figures~\ref{fig:comparison_best} and~\ref{fig:comparison_avg}) reveals a striking pattern: ACO consistently underperforms both baseline methods across all test instances, challenging the expectation that metaheuristics should outperform simple constructive approaches. Examining best-case performance (Figure~\ref{fig:comparison_best}), ACO produces 58-166\% more colors than the best-known solutions, while Tabu Search achieves only 21-46\% deviation. More concerning, ACO even trails the deterministic Greedy algorithm on some instances, suggesting fundamental algorithmic limitations rather than mere parameter tuning issues.
+
+The average performance over three runs (Figure~\ref{fig:comparison_avg}) exposes an additional scalability problem: the performance gap between ACO and Tabu Search widens dramatically as graph size increases. On dsjc250.5 (250 vertices), ACO uses approximately 56 colors versus TS's 35 colors—a 61\% increase. However, on dsjc1000.5 (1000 vertices), ACO requires 227 colors versus TS's 125 colors—an 82\% increase. This non-linear degradation indicates that ACO's population-based constructive approach struggles increasingly with larger problem instances, likely due to pheromone signal dilution across the expanding solution space. The consistency metrics further reveal that while ACO shows low standard deviation (indicating reproducible results), it reproducibly achieves poor solutions—consistency without quality provides little practical value.
 
 \subsection{Algorithm-by-Algorithm Analysis}
 
@@ -534,18 +526,9 @@ ACO demonstrates distinct characteristics as a constructive population-based met
     \item \textbf{Scalability:} Performance degradation increases with graph size (167\% deviation on dsjc1000.5 vs 99\% on dsjc250.5).
 \end{itemize}
 
-\subsection{Detailed Discussion and Insights}
 
-\subsubsection{Quality-Time Trade-off}
-The experimental results (Table~\ref{tab:performance_comparison}) demonstrate clear trade-offs between the three algorithmic paradigms, as illustrated in Figures \ref{fig:comparison_best}, \ref{fig:comparison_avg}, and \ref{fig:comparison_time}:
-\begin{itemize}
-    \item \textbf{Greedy:} Fastest but lowest quality - appropriate for time-critical applications.
-    \item \textbf{Tabu Search:} Highest quality but most expensive - optimal when solution quality is paramount.
-    \item \textbf{ACO:} Middle ground in time but poorest quality - demonstrates that population-based methods don't automatically outperform single-solution approaches.
-\end{itemize}
 
-\subsubsection{Computational Efficiency Analysis}
-Despite using 82 parallel ants, ACO's computational performance (Figure~\ref{fig:comparison_time}) surprisingly matches Tabu Search's single-solution sequential approach rather than achieving the expected speedup from parallelization. The timing results show ACO is 23\% slower on dsjc250.5 (1134s vs 926s), 13\% faster on dsjc500.9 (5854s vs 6731s), and 36\% slower on dsjc1000.5 (13670s vs 10026s). This near-parity occurs because the algorithms operate on fundamentally different time-complexity trade-offs: ACO runs fewer iterations (261) but must execute 82 ant constructions per iteration with probabilistic color selection and pheromone updates, while TS runs many more iterations (7000 per color level) with cheaper deterministic move evaluations. The result is a troubling cost-benefit ratio—ACO consumes comparable computational resources to TS while delivering dramatically inferior solution quality (2-3× more colors). Greedy's extreme speed advantage (< 1 second) positions it as the clear winner when rapid approximate solutions suffice, while TS dominates when quality justifies computational investment.
+\subsection{Computational Efficiency}
 
 \begin{figure}[H]
     \centering
@@ -554,7 +537,23 @@ Despite using 82 parallel ants, ACO's computational performance (Figure~\ref{fig
     \label{fig:comparison_time}
 \end{figure}
 
-\subsubsection{Why ACO Underperforms}
+Despite using 82 parallel ants, ACO's computational performance (Figure~\ref{fig:comparison_time}) surprisingly matches Tabu Search's single-solution sequential approach rather than achieving the expected speedup from parallelization. The timing results show:
+\begin{itemize}
+    \item \textbf{dsjc250.5:} ACO is 23\% slower than TS (1134s vs 926s)
+    \item \textbf{dsjc500.9:} ACO is 13\% faster than TS (5854s vs 6731s)
+    \item \textbf{dsjc1000.5:} ACO is 36\% slower than TS (13670s vs 10026s)
+\end{itemize}
+
+This near-parity occurs because the algorithms operate on fundamentally different time-complexity trade-offs:
+\begin{itemize}
+    \item ACO runs fewer iterations (261) but must execute 82 ant constructions per iteration with probabilistic color selection and pheromone updates
+    \item TS runs many more iterations (7000 per color level) with cheaper deterministic move evaluations
+    \item Both algorithms spend time on different operations: ACO on probabilistic selection and pheromone updates, TS on conflict counting and move evaluation
+\end{itemize}
+
+The result is a troubling cost-benefit ratio—ACO consumes comparable computational resources to TS while delivering dramatically inferior solution quality (2-3× more colors). Greedy's extreme speed advantage (< 1 second) positions it as the clear winner when rapid approximate solutions suffice, while TS dominates when quality justifies computational investment.
+
+\subsection{Why ACO Underperforms}
 While the empirical results clearly demonstrate ACO's underperformance, the underlying causes likely involve several interconnected factors, though definitive attribution remains uncertain:
 
 \begin{enumerate}
@@ -565,7 +564,7 @@ While the empirical results clearly demonstrate ACO's underperformance, the unde
     \item \textbf{Pheromone Sparsity:} With large color sets (50-200 colors), pheromone signals may become diluted across the matrix, potentially weakening learning effects. TS's tabu list directly prevents recently rejected moves without statistical dilution. That said, alternative pheromone representations (e.g., edge-color instead of node-color) might mitigate this issue.
 \end{enumerate}
 
-\subsubsection{Graph Characteristics Impact}
+\subsection{Graph Characteristics Impact}
 As shown in Table~\ref{tab:performance_comparison} and illustrated in Figures~\ref{fig:comparison_best} and~\ref{fig:comparison_avg}:
 \begin{itemize}
     \item \textbf{Density Effect:} All algorithms struggle more with high-density graphs (dsjc500.9, 90\% density) where conflict constraints are tighter. However, ACO's degradation is most severe (58\% deviation vs 30\% for TS).
@@ -575,26 +574,17 @@ As shown in Table~\ref{tab:performance_comparison} and illustrated in Figures~\r
     \item \textbf{dsjc250.5 Anomaly:} Surprisingly, ACO performs worst on the smallest instance (96\% deviation), suggesting that the 82-ant population may be over-exploring on simpler graphs where focused intensification (TS) is more effective.
 \end{itemize}
 
-\subsubsection{Computational Efficiency Analysis}
-Despite using 82 parallel ants, ACO's computational time is comparable to TS:
-\begin{itemize}
-    \item \textbf{dsjc250.5:} ACO is 23\% slower than TS (1134s vs 926s)
-    \item \textbf{dsjc500.9:} ACO is 13\% faster than TS (5854s vs 6731s)
-    \item \textbf{dsjc1000.5:} ACO is 36\% slower than TS (13670s vs 10026s)
-\end{itemize}
+\section{Conclusion}
+\label{sec:conclusion}
 
-This near-parity occurs because:
-\begin{itemize}
-    \item ACO runs fewer iterations (261) with many ants per iteration
-    \item TS runs many more iterations (7000 per color level) with single-solution updates
-    \item Both algorithms spend time on different operations: ACO on probabilistic selection and pheromone updates, TS on conflict counting and move evaluation
-\end{itemize}
+The comparative analysis reveals distinct paradigm trade-offs among the three algorithmic approaches. \textbf{Greedy} excels when speed is critical and moderate solution quality suffices (quick prototyping, real-time systems), achieving solutions in under one second with 38-50\% deviation from BKS. \textbf{Tabu Search} is preferred when solution quality is paramount and computational time is available (offline optimization, production systems), achieving 21-46\% deviation from BKS despite requiring 926-10,026 seconds. \textbf{ACO} demonstrates that population-based methods are not inherently superior to single-solution approaches—achieving 58-167\% deviation from BKS with comparable execution time to Tabu Search.
 
-\subsection{Discussion}
+The current ACO implementation might become competitive with enhancements such as improved heuristics (degree-based), hybrid approaches using TS-quality solutions to initialize pheromones, local search post-processing, or alternative pheromone models (noder coloring order instead of node-color).
 
-The comparative analysis reveals distinct paradigm trade-offs. Greedy excels when speed is critical and moderate solution quality suffices (quick prototyping, real-time systems), while Tabu Search is preferred when solution quality is paramount and computational time is available (offline optimization, production systems with quality requirements). The current ACO implementation is not recommended for graph coloring in its present form, though it might become competitive with enhancements such as improved heuristics (degree-based, conflict-prediction), hybrid approaches using TS-quality solutions to initialize pheromones, local search post-processing, or alternative pheromone models (edge-color instead of node-color).
+Fundamentally, problem structure determines paradigm suitability rather than algorithmic category. Improvement-based methods like Tabu Search benefit from starting with feasible solutions, while constructive methods like ACO must learn from scratch. The effectiveness of metaheuristics depends heavily on problem-specific heuristics and operators; ACO's generic pheromone model may be insufficient for highly constrained problems like graph coloring. Ultimately, there is no universally best algorithm—the choice depends on specific requirements including time budget, quality needs, and problem characteristics.
 
-Fundamentally, population-based methods are not inherently superior to single-solution methods—problem structure determines paradigm suitability. Improvement-based methods like TS benefit from starting with feasible solutions, while constructive methods like ACO must learn from scratch. The effectiveness of metaheuristics depends heavily on problem-specific heuristics and operators; ACO's generic pheromone model may be insufficient for highly constrained problems like graph coloring. Ultimately, there is no universally best algorithm—the choice depends on specific requirements including time budget, quality needs, and problem characteristics.
+\subsection{Contribution}
+This work implements a constructive ACO approach for graph coloring with dynamic pheromone matrix expansion and parallel ant execution (82 ants) using multi-threading. Comprehensive hyperparameter tuning via Optuna framework over 40 trials optimized 6 parameters ($\alpha=1.54$, $\beta=5.97$, $\rho=0.097$, $m=82$, $Q=1.30$, iterations=261). The study provides a three-way empirical comparison across Greedy, Tabu Search, and ACO on DIMACS benchmarks (250-1000 vertices, 50-90\% density), revealing that constructive methods avoid initial solution dependency but achieve higher color counts than improvement-based approaches, while population-based methods offer consistent performance across instances.
 
 \clearpage
 
